[package]
name = "cheatz"
version = "0.1.0"
authors = ["adamc <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cheatlib"
crate-type = ["rlib", "dylib"]



[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "fileapi", "winuser", "processthreadsapi", "handleapi", "memoryapi", "synchapi"]} 