[package]
name = "cheatlib"
version = "0.1.0"
authors = ["adamc <you@example.com>"]
edition = "2018"

[lib]
name = "cheatlib"
crate-type = ["rlib", "cdylib"]


[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "fileapi", "winuser", "processthreadsapi", "handleapi", "memoryapi", "synchapi","consoleapi", "errhandlingapi"]} 
